tests/diagnostics/catalog/snapshots/ir/IR0016.snap
error[IR0016]: IR_E_EXPECTED_DELIMITER
 --> tests/diagnostics/catalog/sources/ir/IR0016.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0016
  = help: keep IR validation diagnostics structured and catalog-backed
